# cargo-task

./: Cargo.toml  README.md  README.tpl  build.rs
.cargo-task/: .gitignore  ci.ct.rs  clippy.ct.rs  default.ct.rs  fmt-check.ct.rs  readme.ct.rs  setup.ct.rs
.cargo-task/ci/: Cargo.toml
.cargo-task/ci/src/: main.rs
.cargo-task/clippy/: Cargo.toml
.cargo-task/clippy/src/: main.rs
.cargo-task/default/: Cargo.toml
.cargo-task/default/src/: main.rs
.cargo-task/fmt-check/: Cargo.toml
.cargo-task/fmt-check/src/: main.rs
.cargo-task/readme/: Cargo.toml
.cargo-task/readme/src/: main.rs
.cargo-task/setup/: Cargo.toml
.cargo-task/setup/src/: main.rs
.cargo-task/test/: Cargo.toml
.cargo-task/test/src/: main.rs
.github/workflows/: ci.yml
src/: _cargo_task_util.rs  at_at.rs  cargo_task_util.rs  env_loader.rs  exec.rs  lib.rs  task.rs
src/task/: ct_clean.rs  ct_init.rs  ct_meta.rs  help.rs  version.rs
